--- a/crowd_control/pubspec.yaml
+++ b/crowd_control/pubspec.yaml
@@ -4,7 +4,14 @@ description: A new Flutter project.
 dependencies:
   flutter:
     sdk: flutter
-
+  #location: "^1.1.7"
+  google_sign_in: 3.0.0                                           
+  firebase_analytics: 0.0.4                                       
+  firebase_auth: 0.2.0                                            
+  firebase_database: 0.0.12                                       
+  firebase_storage: 0.0.5  
+  
+  location: "^1.1.7"
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.0
